--- a/02.01.23/style.css
+++ b/02.01.23/style.css
@@ -26,6 +26,12 @@ body {
     border-radius: 8px;
     box-shadow: 5px 5px 10px black;
     color: #fff;
+    transition: all 0.5s;
+}
+
+.wrapper:hover {
+    transform: scale(1.01);
+    box-shadow: 5px 5px 30px black;
 }
 
 .info {
@@ -77,7 +83,7 @@ button {
     border: 1px solid #062bfa;
     border-radius: 5px;
     cursor: pointer;
-    transition: background-color .3s;
+    transition: all .3s;
 }
 
 .history {
@@ -89,6 +95,7 @@ button:hover,
 button:focus {
     background-color: #062bfa;
     outline: none;
+    transform: scale(0.95);
 }
 
 .time-list li {
