--- a/02.01.23/style.css
+++ b/02.01.23/style.css
@@ -11,7 +11,8 @@ body {
     flex-direction: column;
     min-height: 100vh;
     font-family: sans-serif;
-    background-color: #333;
+    background: #9F9FED;
+    background: radial-gradient(circle, #9F9FED 0%, #736CED 100%);
 }
 
 .wrapper {
@@ -22,16 +23,19 @@ body {
     flex-direction: column;
     padding: 50px;
     width: 800px;
-    background: radial-gradient(circle, rgba(43, 44, 46, 1) 0%, rgba(25, 25, 25, 1) 93%);
+    background: rgba( 255, 255, 255, 0.25 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
     border-radius: 8px;
-    box-shadow: 5px 5px 10px black;
     color: #fff;
     transition: all 0.5s;
 }
 
 .wrapper:hover {
-    transform: scale(1.01);
-    box-shadow: 5px 5px 30px black;
+    box-shadow: 0 8px 52px 0 rgba( 31, 38, 135, 0.37 );
 }
 
 .info {
@@ -46,18 +50,19 @@ body {
 }
 
 .info:hover {
-    color: #062bfa;
+    color: #D4C1EC;
 }
 
 h1 {
     margin-bottom: 20px;
     font-size: 60px;
     font-weight: lighter;
+    color: #FEF9FF;
 }
 
 .stopwatch {
     font-size: 72px;
-    color: #062bfa;
+    color: #F2DFD7;
 }
 
 .time {
@@ -80,7 +85,7 @@ button {
     color: #fff;
     font-size: 22px;
     background-color: transparent;
-    border: 1px solid #062bfa;
+    border: 1px solid #D4C1EC;
     border-radius: 5px;
     cursor: pointer;
     transition: all .3s;
@@ -93,7 +98,7 @@ button {
 
 button:hover,
 button:focus {
-    background-color: #062bfa;
+    background-color: #D4C1EC;
     outline: none;
     transform: scale(0.95);
 }
