--- a/02.01.23/style.css
+++ b/02.01.23/style.css
@@ -106,12 +106,16 @@ button:focus {
     transform: scale(0.95);
 }
 
+.time-list {
+    display: none;
+}
+
 .time-list li {
     display: flex;
     justify-content: space-between;
     width: 300px;
     font-size: 22px;
-    color: #bed2d1;
+    color: #FEF9FF;
 }
 
 .time-list span {
@@ -123,19 +127,23 @@ button:focus {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, .65);
 }
 
 .modal {
+    color: #FEF9FF;
     position: absolute;
-    top: 50%;
+    top: 22%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 600px;
     height: 360px;
     padding: 30px 60px;
-    border-radius: 15px;
-    background-color: rgb(245, 245, 245);
+    background: rgba( 255, 255, 255, 0.25 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 
 .modal h3 {
@@ -153,12 +161,12 @@ button:focus {
     display: block;
     margin: 40px auto 0;
     width: 200px;
-    background-color: #062bfa;
-    transition: background-color .3s;
+    border: 2px solid #D4C1EC;
+    transition: all 0.5s;
 }
 
 .modal .close:hover {
-    background-color: rgb(226, 36, 26);
+    background-color: #D4C1EC;
 }
 
 .modal-animation {
